--- a/wine_fridge/templates/index.html
+++ b/wine_fridge/templates/index.html
@@ -3,7 +3,7 @@
       <title>GPIO Control</title>
 	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href='../static/style.css'/> 
-	  <meta http-equiv="refresh" content="5" >
+	  <!-- <meta http-equiv="refresh" content="5" > -->
 	  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    </head>
    <body class="test">
@@ -14,5 +14,18 @@
 			<p class="card-text">Temperature {{temperature}}</p>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
+
+		<script>
+			$.ajax({
+				url: "/",
+				type:"get",
+				data:{jsdata:text},
+				success: function(response){
+					$
+				}
+			})
+		</script>
+		
 	</body>
 </html>
